fix: don't prepend prefix flex- before start for text-align

--- a/src/v2/styles/ChannelPreview/ChannelPreview-layout.scss
+++ b/src/v2/styles/ChannelPreview/ChannelPreview-layout.scss
@@ -8,7 +8,7 @@
   width: 100%;
   padding: var(--str-chat__spacing-3) var(--str-chat__spacing-2);
   margin: 0;
-  text-align: flex-start;
+  text-align: start;
 }
 
 @mixin channel-preview-end-layout {
