--- a/src/v2/styles/MessageActionsBox/MessageActionsBox-layout.scss
+++ b/src/v2/styles/MessageActionsBox/MessageActionsBox-layout.scss
@@ -30,7 +30,7 @@
       padding: var(--str-chat__spacing-2) var(--str-chat__spacing-4);
       cursor: pointer;
       width: 100%;
-      text-align: flex-start;
+      text-align: start;
     }
   }
 }
